force-app/main/default/objects/Invoice__c/fields/IGST_Rate_for_Invoice_Amount_TI__c.field-meta.xml
<CustomField>
    <fullName>IGST_Rate_for_Invoice_Amount_TI__c</fullName>
    <label>IGST Rate for Invoice Amount (Locked)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>