force-app/main/default/objects/Invoice__c/fields/Initiate_Tax_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Tax_Invoice_Status__c</fullName>
    <description>to track the approval status of the Initiate Tax Invoice</description>
    <label>Initiate Tax Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ITI Pending with Finance</fullName>
            </value>
            <value>
                <fullName>ITI Approved</fullName>
            </value>
            <value>
                <fullName>ITI Rejected</fullName>
            </value>
            <value>
                <fullName>ITI Pending</fullName>
                <isActive>false</isActive>
                <label>ITI Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>