force-app/main/default/objects/Invoice__c/fields/Initiate_Tax_Invoice_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Tax_Invoice_Status_Formula__c</fullName>
    <formula>TEXT(Initiate_Tax_Invoice_Status__c)</formula>
    <label>Initiate Tax Invoice Status</label>
    <type>Text</type>
</CustomField>