force-app/main/default/objects/Invoice__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <formula>TEXT(Opportunity_Name__r.Instrument_type_4__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instrument</label>
    <type>Text</type>
</CustomField>