force-app/main/default/objects/Invoice__c/fields/Instrument_TI__c.field-meta.xml
<CustomField>
    <fullName>Instrument_TI__c</fullName>
    <label>Instrument (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>