force-app/main/default/objects/Invoice__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <formula>Invoice_No__r.Total_Invoice_Taxable_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount CN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>