force-app/main/default/objects/Invoice__c/fields/Invoice_Created__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Created__c</fullName>
    <description>To check whether the record is created or not</description>
    <formula>NOT(ISBLANK(Id))</formula>
    <label>Invoice Created</label>
    <type>Checkbox</type>
</CustomField>