force-app/main/default/objects/Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Used in Credit note PDF and Reports (Convert date to Text)</description>
    <formula>Invoice_No__r.Invoice_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date CN</label>
    <type>Date</type>
</CustomField>