force-app/main/default/objects/Invoice__c/fields/Invoice_Date_Copy__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Copy__c</fullName>
    <description>Used in IRN Report (Convert Date TO text)</description>
    <formula>TEXT(DAY( Invoice_Created_Date__c )) +&apos;/&apos;+TEXT( MONTH(Invoice_Created_Date__c )) +&apos;/&apos; +TEXT(YEAR(Invoice_Created_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date RP</label>
    <type>Text</type>
</CustomField>