force-app/main/default/objects/Invoice__c/fields/Invoice_Date_Copy_TI__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Copy_TI__c</fullName>
    <label>Invoice Date RP (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>