force-app/main/default/objects/Invoice__c/fields/Invoice_Date_TI__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_TI__c</fullName>
    <label>Invoice Date CN (Locked)</label>
    <type>Date</type>
</CustomField>