force-app/main/default/objects/Invoice__c/fields/Invoice_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Invoice External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>