force-app/main/default/objects/Invoice__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice No</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Credit Note</relationshipLabel>
    <relationshipName>Credit_Note</relationshipName>
    <type>Lookup</type>
</CustomField>