force-app/main/default/objects/Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Proforma Invoice</fullName>
                <default>true</default>
                <label>Proforma Invoice</label>
            </value>
            <value>
                <fullName>Tax Invoice</fullName>
            </value>
            <value>
                <fullName>QR-IRN-Generated</fullName>
                <label>QR and IRN - Generated</label>
            </value>
            <value>
                <fullName>QR and IRN - Failed</fullName>
            </value>
            <value>
                <fullName>Initiate Tax Invoice</fullName>
            </value>
            <value>
                <fullName>GST Credit Note</fullName>
            </value>
            <value>
                <fullName>Initiate GST Credit Note</fullName>
            </value>
            <value>
                <fullName>Cancel Due to Credit Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>