force-app/main/default/objects/Invoice__c/fields/Invoice_Status_CreditNote__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status_CreditNote__c</fullName>
    <formula>if( AND(NOT(ISBLANK(Invoice_No__c)),RecordType.Name == &apos;Credit Note&apos;), TEXT(Invoice_No__r.Invoice_Status__c),TEXT(Invoice_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Status CN</label>
    <type>Text</type>
</CustomField>