force-app/main/default/objects/Invoice__c/fields/Invoice_Status_CreditNote_TI__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status_CreditNote_TI__c</fullName>
    <label>Invoice Status CN (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>