force-app/main/default/objects/Invoice__c/fields/Is_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Is_Ageing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Ageing</label>
    <type>Checkbox</type>
</CustomField>