force-app/main/default/objects/Invoice__c/fields/Is_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Is_Update_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Update Status</label>
    <type>Checkbox</type>
</CustomField>