force-app/main/default/objects/Invoice__c/fields/isFirst_InvoiceLine_Item__c.field-meta.xml
<CustomField>
    <fullName>isFirst_InvoiceLine_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFirst_InvoiceLine_Item</label>
    <type>Checkbox</type>
</CustomField>