force-app/main/default/objects/Invoice__c/fields/Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Count__c</fullName>
    <label>Line Count</label>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice_No__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>