force-app/main/default/objects/Invoice__c/fields/Line_Count_TI__c.field-meta.xml
<CustomField>
    <fullName>Line_Count_TI__c</fullName>
    <label>Line Count (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>