force-app/main/default/objects/Invoice__c/fields/Location_of_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Supplier__c</fullName>
    <formula>Opportunity_Name__r.Opp_ICRA_Branch__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location of Supplier</label>
    <type>Text</type>
</CustomField>