force-app/main/default/objects/Invoice__c/fields/Location_of_Supplier_TI__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Supplier_TI__c</fullName>
    <label>Location of Supplier (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>