force-app/main/default/objects/Invoice__c/fields/No_Client_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>No_Client_Confirmation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to handle the email notification while proforma invoice is approve/rejected</description>
    <label>No Client Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>