force-app/main/default/objects/Invoice__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>Opportunity_Name__r.Owner.FirstName + &apos; &apos; +  Opportunity_Name__r.Owner.LastName</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>