force-app/main/default/objects/Invoice__c/fields/Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount__c</fullName>
    <formula>Opportunity_Name__r.VoD_in_crore__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>