force-app/main/default/objects/Invoice__c/fields/Outstanding_Amount_TI__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount_TI__c</fullName>
    <label>Outstanding Amount (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>