force-app/main/default/objects/Invoice__c/fields/Particulars__c.field-meta.xml
<CustomField>
    <fullName>Particulars__c</fullName>
    <formula>TEXT( Opportunity_Name__r.Business_Segment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Particulars</label>
    <type>Text</type>
</CustomField>