force-app/main/default/objects/Invoice__c/fields/Particulars_TI__c.field-meta.xml
<CustomField>
    <fullName>Particulars_TI__c</fullName>
    <label>Particulars (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>