force-app/main/default/objects/Invoice__c/fields/Phone_TI__c.field-meta.xml
<CustomField>
    <fullName>Phone_TI__c</fullName>
    <label>Phone (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>