force-app/main/default/objects/Invoice__c/fields/PI_Send__c.field-meta.xml
<CustomField>
    <fullName>PI_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PI Send</label>
    <type>Checkbox</type>
</CustomField>