force-app/main/default/objects/Invoice__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <formula>IF(Opportunity_Name__r.Account.RecordType.Name ==&apos;Investors &amp; Intermediary&apos;,  Opportunity_Name__r.Account.ShippingPostalCode , Opportunity_Name__r.BillingAddress__r.Billing_Zip_Postal_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pincode</label>
    <type>Text</type>
</CustomField>