force-app/main/default/objects/Invoice__c/fields/Pincode_TI__c.field-meta.xml
<CustomField>
    <fullName>Pincode_TI__c</fullName>
    <label>Pincode (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>