force-app/main/default/objects/Invoice__c/fields/Proforma_Invoice_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Email_Sent__c</fullName>
    <label>Proforma Invoice Email Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>