force-app/main/default/objects/Invoice__c/fields/Proforma_Invoice_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Email_Sent_Date__c</fullName>
    <label>Proforma Invoice Email Sent Date</label>
    <type>Date</type>
</CustomField>