force-app/main/default/objects/Invoice__c/fields/Proforma_Invoice_ok__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_ok__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true email will be send to customer with attached PI invoice pdf</description>
    <label>Proforma Invoice ok</label>
    <type>Checkbox</type>
</CustomField>