force-app/main/default/objects/Invoice__c/fields/Proforma_Invoice_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proforma Invoice Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>