force-app/main/default/objects/Invoice__c/fields/Proforma_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Status__c</fullName>
    <description>To check the approval status of a proforma invoice</description>
    <label>Proforma Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI Approved</fullName>
            </value>
            <value>
                <fullName>PI Rejected</fullName>
            </value>
            <value>
                <fullName>PI Pending with Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>