force-app/main/default/objects/Invoice__c/fields/Proforma_Invoice_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Status_Formula__c</fullName>
    <formula>TEXT(Proforma_Invoice_Status__c)</formula>
    <label>Proforma Invoice Status</label>
    <type>Text</type>
</CustomField>