force-app/main/default/objects/Invoice__c/fields/Reason_for_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Credit_Note__c</fullName>
    <label>Reason for Credit Note</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reduction in Limits</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>