force-app/main/default/objects/Invoice__c/fields/Remove_Header_From_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Remove_Header_From_Invoice__c</fullName>
    <formula>IF( AND(OR( ISPICKVAL( Opportunity_Name__r.Instrument_type_4__c , &apos;Resolution Plan - Independent Credit Evaluation (ICE)&apos;), ISPICKVAL( Opportunity_Name__r.Instrument_type_4__c , &apos;Loss Estimation/Direct Assignment&apos;),
	        ISPICKVAL( Opportunity_Name__r.Instrument_type_4__c , &apos;Infrastructure Expected Loss Ratings&apos;)
								), Opportunity_Name__r.Bill_To__c != null),true, false	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remove Header From Invoice</label>
    <type>Checkbox</type>
</CustomField>