force-app/main/default/objects/Invoice__c/fields/Remove_Header_From_Invoice_TI__c.field-meta.xml
<CustomField>
    <fullName>Remove_Header_From_Invoice_TI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Header From Invoice (Locked)</label>
    <type>Checkbox</type>
</CustomField>