force-app/main/default/objects/Invoice__c/fields/Revised_agreed_amount__c.field-meta.xml
<CustomField>
    <fullName>Revised_agreed_amount__c</fullName>
    <label>Revised Agreed Amount CN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>