force-app/main/default/objects/Invoice__c/fields/Revised_Agreed_Amount_Copy__c.field-meta.xml
<CustomField>
    <fullName>Revised_Agreed_Amount_Copy__c</fullName>
    <formula>Revised_agreed_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revised Agreed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>