force-app/main/default/objects/Invoice__c/fields/SAC_HSN_TI__c.field-meta.xml
<CustomField>
    <fullName>SAC_HSN_TI__c</fullName>
    <label>SAC/HSN (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>