force-app/main/default/objects/Invoice__c/fields/Send_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Confirmation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to send an email to the opportunity owner for confirmation of the &apos;To&apos; &amp;7 &apos;CC&apos; details</description>
    <label>Send Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>