force-app/main/default/objects/Invoice__c/fields/Sent_To_Client_Details__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Client_Details__c</fullName>
    <description>to store the details</description>
    <label>Sent To Client Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>