force-app/main/default/objects/Invoice__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity_Name__r.Instrument_type_4__c,&apos;Monitoring Activity&apos;),&apos;IP&apos;,IF( Opportunity_Name__r.RecordType.Name == &apos;Surveillance&apos;, &apos;RS&apos;, IF( ISPICKVAL( Opportunity_Name__r.Business_Segment__c , &quot;Research&quot;),&apos;SR&apos;,&apos;RF&apos; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Code</label>
    <type>Text</type>
</CustomField>