force-app/main/default/objects/Invoice__c/fields/Service_Code_TI__c.field-meta.xml
<CustomField>
    <fullName>Service_Code_TI__c</fullName>
    <label>Service Code (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>