force-app/main/default/objects/Invoice__c/fields/SGST_Rate_for_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>SGST_Rate_for_Credit_Note__c</fullName>
    <formula>IF(ISPICKVAL(Credit_Note_Type__c, &apos;Commercial&apos;),0,  SGST_UTGST_Rate_for_Invoice_Amount__c *100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST Rate for Credit Note</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>