force-app/main/default/objects/Invoice__c/fields/Skip_PB__c.field-meta.xml
<CustomField>
    <fullName>Skip_PB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to skip the process builder &apos;Genrate_Billing_Number_on_Invoice&apos;</description>
    <label>Skip_PB</label>
    <type>Checkbox</type>
</CustomField>