force-app/main/default/objects/Invoice__c/fields/Source_Branch__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Source Branch</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>