force-app/main/default/objects/Invoice__c/fields/Supplier_GSTIN_TI__c.field-meta.xml
<CustomField>
    <fullName>Supplier_GSTIN_TI__c</fullName>
    <label>Supplier GSTIN (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>