force-app/main/default/objects/Invoice__c/fields/Supplier_State__c.field-meta.xml
<CustomField>
    <fullName>Supplier_State__c</fullName>
    <formula>TEXT( Opportunity_Name__r.Opp_ICRA_Branch__r.State__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier State</label>
    <type>Text</type>
</CustomField>