force-app/main/default/objects/Invoice__c/fields/Supplier_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_State_Code__c</fullName>
    <formula>Opportunity_Name__r.Opp_ICRA_Branch__r.State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Country Name will be displayed within Generated Invoice for Account Type Classification: Export.</inlineHelpText>
    <label>Supplier State Code</label>
    <type>Text</type>
</CustomField>