force-app/main/default/objects/Invoice__c/fields/Supplier_State_Code_TI__c.field-meta.xml
<CustomField>
    <fullName>Supplier_State_Code_TI__c</fullName>
    <label>Supplier State Code (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>