force-app/main/default/objects/Invoice__c/fields/Tax_DSC_Sign__c.field-meta.xml
<CustomField>
    <fullName>Tax_DSC_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax DSC Sign</label>
    <type>Checkbox</type>
</CustomField>