force-app/main/default/objects/Invoice__c/fields/Tax_Invoice_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Invoice_Email_Sent_Date__c</fullName>
    <label>Tax Invoice Email Sent Date</label>
    <type>Date</type>
</CustomField>