force-app/main/default/objects/Invoice__c/fields/Tax_Invoice_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Tax_Invoice_Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Invoice Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>