force-app/main/default/objects/Invoice__c/fields/Tax_Send__c.field-meta.xml
<CustomField>
    <fullName>Tax_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Send</label>
    <type>Checkbox</type>
</CustomField>