force-app/main/default/objects/Invoice__c/fields/Tax_subject_to_reverse_charge__c.field-meta.xml
<CustomField>
    <fullName>Tax_subject_to_reverse_charge__c</fullName>
    <label>Tax Subject to Reverse Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>