force-app/main/default/objects/Invoice__c/fields/Total_CGST_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_CGST_Invoice_Amount__c</fullName>
    <label>Total CGST Invoice Amount</label>
    <summarizedField>Invoice_Line_Item__c.CGST_Invoice_Amt_Copy__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>