force-app/main/default/objects/Invoice__c/fields/Total_CGST_Invoice_Amount_TI__c.field-meta.xml
<CustomField>
    <fullName>Total_CGST_Invoice_Amount_TI__c</fullName>
    <label>Total CGST Invoice Amount (Locked)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>