force-app/main/default/objects/Invoice__c/fields/Total_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Amount__c</fullName>
    <formula>Credit_Note__c  +  Total_GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>