force-app/main/default/objects/Invoice__c/fields/Total_Credit_Amount_Copy__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Amount_Copy__c</fullName>
    <label>Total Credit Amount Copy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>