force-app/main/default/objects/Invoice__c/fields/Total_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_Amount__c</fullName>
    <formula>ROUND(CGST_Amount_on_Credit_Note__c,0)+ ROUND(IGST_Amount_on_Credit_Note__c,0) + ROUND(SGST_UTGST_Amount_on_Credit_Note__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GST Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>