force-app/main/default/objects/Invoice__c/fields/Total_GST_Amount_TI__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_Amount_TI__c</fullName>
    <label>Total GST Amount (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>