force-app/main/default/objects/Invoice__c/fields/Total_IGST_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_IGST_Invoice_Amount__c</fullName>
    <label>Total IGST Invoice Amount</label>
    <summarizedField>Invoice_Line_Item__c.IGST_for_Invoice_Amt__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>