force-app/main/default/objects/Invoice__c/fields/Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount__c</fullName>
    <label>Total Invoice Amount</label>
    <summarizedField>Invoice_Line_Item__c.Total_Invoice_Amount_WF__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>