force-app/main/default/objects/Invoice__c/fields/Total_Invoice_Amount_Copy_TI__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount_Copy_TI__c</fullName>
    <label>Total Invoice Amount RP (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>